// Vitest Snapshot v1

exports[`webpackConfig > should allow to append and prepend plugins 1`] = `
[
  DefinePlugin {
    "definitions": {
      "foo": "2",
    },
  },
  DefinePlugin {
    "definitions": {
      "foo": "1",
    },
  },
]
`;

exports[`webpackConfig > should allow to use tools.webpackChain to modify config 1`] = `
{
  "context": "<ROOT>",
  "devtool": "eval",
  "infrastructureLogging": {
    "level": "error",
  },
  "mode": "development",
  "module": {
    "parser": {
      "javascript": {
        "dynamicImportMode": undefined,
        "exportsPresence": "error",
      },
    },
  },
  "name": "Client",
  "performance": {
    "maxAssetSize": 3000000,
    "maxEntrypointSize": 3000000,
  },
}
`;

exports[`webpackConfig > should allow tools.webpack to be an array 1`] = `
{
  "context": "<ROOT>",
  "devtool": "source-map",
  "infrastructureLogging": {
    "level": "error",
  },
  "mode": "development",
  "module": {
    "parser": {
      "javascript": {
        "dynamicImportMode": undefined,
        "exportsPresence": "error",
      },
    },
  },
  "name": "Client",
  "performance": {
    "maxAssetSize": 3000000,
    "maxEntrypointSize": 3000000,
  },
}
`;

exports[`webpackConfig > should allow tools.webpack to be an object 1`] = `
{
  "context": "<ROOT>",
  "devtool": "eval",
  "infrastructureLogging": {
    "level": "error",
  },
  "mode": "development",
  "module": {
    "parser": {
      "javascript": {
        "dynamicImportMode": undefined,
        "exportsPresence": "error",
      },
    },
  },
  "name": "Client",
  "performance": {
    "maxAssetSize": 3000000,
    "maxEntrypointSize": 3000000,
  },
}
`;

exports[`webpackConfig > should allow tools.webpack to modify config object 1`] = `
{
  "context": "<ROOT>",
  "devtool": "eval",
  "infrastructureLogging": {
    "level": "error",
  },
  "mode": "development",
  "module": {
    "parser": {
      "javascript": {
        "dynamicImportMode": undefined,
        "exportsPresence": "error",
      },
    },
  },
  "name": "Client",
  "performance": {
    "maxAssetSize": 3000000,
    "maxEntrypointSize": 3000000,
  },
}
`;

exports[`webpackConfig > should allow tools.webpack to return config 1`] = `
{
  "context": "<ROOT>",
  "devtool": "eval",
  "infrastructureLogging": {
    "level": "error",
  },
  "mode": "development",
  "module": {
    "parser": {
      "javascript": {
        "dynamicImportMode": undefined,
        "exportsPresence": "error",
      },
    },
  },
  "name": "Client",
  "performance": {
    "maxAssetSize": 3000000,
    "maxEntrypointSize": 3000000,
  },
}
`;

exports[`webpackConfig > should allow tools.webpackChain to be an array 1`] = `
{
  "context": "<ROOT>",
  "devtool": "source-map",
  "infrastructureLogging": {
    "level": "error",
  },
  "mode": "development",
  "module": {
    "parser": {
      "javascript": {
        "dynamicImportMode": undefined,
        "exportsPresence": "error",
      },
    },
  },
  "name": "Client",
  "performance": {
    "maxAssetSize": 3000000,
    "maxEntrypointSize": 3000000,
  },
}
`;

exports[`webpackConfig > should provide mergeConfig util in tools.webpack function 1`] = `
{
  "context": "<ROOT>",
  "devtool": "eval",
  "infrastructureLogging": {
    "level": "error",
  },
  "mode": "development",
  "module": {
    "parser": {
      "javascript": {
        "dynamicImportMode": undefined,
        "exportsPresence": "error",
      },
    },
  },
  "name": "Client",
  "performance": {
    "maxAssetSize": 3000000,
    "maxEntrypointSize": 3000000,
  },
}
`;

exports[`webpackConfig > should set proper pluginImport option in Babel 1`] = `
[
  {
    "include": [
      {
        "and": [
          "<ROOT>",
          {
            "not": /node_modules/,
          },
        ],
      },
    ],
    "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$\\|\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
    "use": [
      {
        "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/babel-loader",
        "options": {
          "babelrc": false,
          "compact": false,
          "configFile": false,
          "plugins": [
            [
              "<WORKSPACE>/packages/cli/babel-preset-base/compiled/babel-plugin-import/index.js",
              {
                "camel2DashComponentName": true,
                "libraryName": "foo",
              },
              "foo",
            ],
            [
              "<WORKSPACE>/packages/cli/babel-preset-app/src/babelPluginLockCorejsVersion",
            ],
            [
              "<WORKSPACE>/packages/cli/babel-preset-base/compiled/babel-plugin-dynamic-import-node/index.js",
            ],
            [
              "<WORKSPACE>/packages/cli/babel-preset-base/compiled/babel-plugin-lodash/index.js",
              {},
            ],
            [
              "<WORKSPACE>/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-decorators/index.js",
              {
                "legacy": true,
              },
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-transform-runtime/lib/index.js",
              {
                "helpers": false,
                "regenerator": true,
                "useESModules": true,
                "version": "7.18.6",
              },
            ],
            [
              "<WORKSPACE>/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-export-default-from/index.js",
            ],
            [
              "<WORKSPACE>/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-pipeline-operator/index.js",
              {
                "proposal": "minimal",
              },
            ],
            [
              "<WORKSPACE>/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-partial-application/index.js",
            ],
            [
              "<WORKSPACE>/packages/cli/babel-preset-base/compiled/babel-plugin-styled-components/index.js",
              {
                "displayName": true,
                "pure": false,
                "ssr": false,
                "transpileTemplateLiterals": true,
              },
              "styled-components",
            ],
          ],
          "presets": [
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/preset-env/lib/index.js",
              {
                "bugfixes": false,
                "corejs": {
                  "proposals": true,
                  "version": "3.30",
                },
                "exclude": [
                  "transform-typeof-symbol",
                ],
                "modules": false,
                "shippedProposals": false,
                "targets": [
                  "> 0.01%",
                  "not dead",
                  "not op_mini all",
                ],
                "useBuiltIns": "entry",
              },
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/preset-react/lib/index.js",
              {
                "development": true,
                "runtime": "classic",
                "useBuiltIns": true,
                "useSpread": false,
              },
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
              {
                "allExtensions": true,
                "allowDeclareFields": true,
                "allowNamespaces": true,
                "isTSX": true,
                "optimizeConstEnums": true,
              },
            ],
          ],
        },
      },
    ],
  },
  {
    "mimetype": {
      "or": [
        "text/javascript",
        "application/javascript",
      ],
    },
    "use": [
      {
        "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/babel-loader",
        "options": {
          "babelrc": false,
          "compact": false,
          "configFile": false,
          "plugins": [
            [
              "<WORKSPACE>/packages/cli/babel-preset-base/compiled/babel-plugin-import/index.js",
              {
                "camel2DashComponentName": true,
                "libraryName": "foo",
              },
              "foo",
            ],
            [
              "<WORKSPACE>/packages/cli/babel-preset-app/src/babelPluginLockCorejsVersion",
            ],
            [
              "<WORKSPACE>/packages/cli/babel-preset-base/compiled/babel-plugin-dynamic-import-node/index.js",
            ],
            [
              "<WORKSPACE>/packages/cli/babel-preset-base/compiled/babel-plugin-lodash/index.js",
              {},
            ],
            [
              "<WORKSPACE>/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-decorators/index.js",
              {
                "legacy": true,
              },
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-transform-runtime/lib/index.js",
              {
                "helpers": false,
                "regenerator": true,
                "useESModules": true,
                "version": "7.18.6",
              },
            ],
            [
              "<WORKSPACE>/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-export-default-from/index.js",
            ],
            [
              "<WORKSPACE>/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-pipeline-operator/index.js",
              {
                "proposal": "minimal",
              },
            ],
            [
              "<WORKSPACE>/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-partial-application/index.js",
            ],
            [
              "<WORKSPACE>/packages/cli/babel-preset-base/compiled/babel-plugin-styled-components/index.js",
              {
                "displayName": true,
                "pure": false,
                "ssr": false,
                "transpileTemplateLiterals": true,
              },
              "styled-components",
            ],
          ],
          "presets": [
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/preset-env/lib/index.js",
              {
                "bugfixes": false,
                "corejs": {
                  "proposals": true,
                  "version": "3.30",
                },
                "exclude": [
                  "transform-typeof-symbol",
                ],
                "modules": false,
                "shippedProposals": false,
                "targets": [
                  "> 0.01%",
                  "not dead",
                  "not op_mini all",
                ],
                "useBuiltIns": "entry",
              },
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/preset-react/lib/index.js",
              {
                "development": true,
                "runtime": "classic",
                "useBuiltIns": true,
                "useSpread": false,
              },
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
              {
                "allExtensions": true,
                "allowDeclareFields": true,
                "allowNamespaces": true,
                "isTSX": true,
                "optimizeConstEnums": true,
              },
            ],
          ],
        },
      },
    ],
  },
]
`;
